Translate: Correct alignment and padding for the bulk actions dropdown.
Props Otshelnik-Fm.
See #6080.

git-svn-id: https://meta.svn.wordpress.org/sites/trunk@11526 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/plugins/wporg-gp-customizations/templates/style.css
+++ b/wordpress.org/public_html/wp-content/plugins/wporg-gp-customizations/templates/style.css
@@ -2331,8 +2331,19 @@ ul.ct-legend {
 	outline: 0;
 }
 
+.gp-content .bulk-actions {
+	margin-bottom: 1rem;
+}
+
+.gp-content .bulk-actions select,
 .gp-content .bulk-actions input.button {
 	vertical-align: middle;
+}
+
+.gp-content .bulk-actions input.button {
+	height: auto;
+	padding: 10px;
+	font-size: 14px;
 }
 
 #legend {
